[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/Daydream.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/scripts/health_bars.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/slider/slider_tick.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/slider/slider_bgl.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=8]
size = 7
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 1 )

[node name="HBars" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -123.0
margin_top = -27.0
margin_right = 123.0
margin_bottom = -4.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerBox" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 99.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="PlayerLabel" type="Label" parent="HBoxContainer/PlayerBox"]
margin_right = 99.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 8 )
text = "Energy"

[node name="PlayerBar" type="TextureProgress" parent="HBoxContainer/PlayerBox"]
margin_top = 12.0
margin_right = 99.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3
rounded = true
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5

[node name="Tween" type="Tween" parent="HBoxContainer/PlayerBox/PlayerBar"]

[node name="Score" type="Label" parent="HBoxContainer"]
margin_left = 109.0
margin_right = 136.0
margin_bottom = 22.0
rect_min_size = Vector2( 27, 22 )
custom_fonts/font = SubResource( 9 )
text = "0"
align = 1
valign = 1
uppercase = true

[node name="EnemyBox" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 146.0
margin_right = 246.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="EnemyLabel" type="Label" parent="HBoxContainer/EnemyBox"]
margin_right = 100.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 8 )
text = "Satisfied"
align = 2

[node name="EnemyBar" type="TextureProgress" parent="HBoxContainer/EnemyBox"]
margin_top = 12.0
margin_right = 100.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
fill_mode = 1
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5

[node name="Tween" type="Tween" parent="HBoxContainer/EnemyBox/EnemyBar"]
